--- a/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.css
+++ b/WebConference-web/src/main/webapp/src/app/conference/conference-details/conference-details.component.css
@@ -1,18 +1,21 @@
 body {
-  color: #666666;
-  font-family: 'RobotoDraft', 'Roboto', sans-serif;
-  font-size: 14px;
+  padding-top: 20px;
+  font-size: 16px;
+  font-family: "Open Sans",serif;
 }
 
-/* Pen Title */
-.pen-title {
+h1 {
+  font-family: "Abel", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 24px;
   margin-top: 30px;
-  padding: 50px 0;
-  text-align: center;
-  letter-spacing: 2px;
 }
-.pen-title h1 {
-  margin: 0;
-  font-size: 30px;
-  font-weight: 300;
+
+h2{
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.title{
+  text-align: center;
 }
