--- a/WebConference-web/src/main/webapp/src/app/home/home.component.html
+++ b/WebConference-web/src/main/webapp/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/home">Conference Management</a>
+    <a class="navbar-brand" href="/welcomepage">Conference Management</a>
     <label for="off_canvas" class="navbar-toggle custom1">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -16,19 +15,19 @@
     <div class="cstm-navi">
       <div class="cstm-navi-content">
         <ul class="nav nav-pills nav-stacked">
-          <li role="presentation"  id="bhome">
-            <a href="/home">
+          <li role="presentation" id="bhome">
+            <a href="/welcomepage">
               <span class="glyphicon glyphicon-home"></span>
               Home
             </a>
           </li>
-          <li role="presentation"  id="bconference">
+          <li role="presentation" id="bconference">
             <a href="/registerconf">
-            <span class="glyphicon glyphicon-plus"></span>
+              <span class="glyphicon glyphicon-plus"></span>
               Add Conference
             </a>
           </li>
-          <li role="presentation"  id="lconference">
+          <li role="presentation" id="lconference">
             <a href="/listconf">
               <span class="glyphicon glyphicon-plus"></span>
               List Conferences
@@ -51,5 +50,4 @@
     </div>
   </div>
 </div>
-
 
